--- a/Tournament/packages.config
+++ b/Tournament/packages.config
@@ -6,7 +6,8 @@
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="elmah.corelibrary" version="1.2" targetFramework="net472" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.7.0-develop00385" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
